[package]
name = "uwebsockets_rs"
version = "0.0.5"
edition = "2021"
authors = ["Genrikh Fetishchev <genrikhfetischev@gmail.com>"]
description = "Rust wrapper for the uWebSockets"
license = "MIT"
homepage = "https://github.com/GenrikhFetischev/uwebsockets_rs"
keywords = ["http", "websocket", "server", "uwebsockets"]
exclude = ["build.rs"]

[profile.dev.build-override]
debug = true
[profile.release.build-override]
debug = true

[features]
native-access = []


[dependencies]
libuwebsockets-sys = { path = "../libuwebsockets-sys", version = "0.0.7", features = ["uws_vendored"] }



