[package]
name = "uwebsockets_rs"
version = "0.0.11"
edition = "2021"
authors = ["Genrikh Fetishchev <genrikhfetischev@gmail.com>"]
description = "Rust wrapper for the uWebSockets"
license = "MIT"
homepage = "https://github.com/GenrikhFetischev/uwebsockets_rs"
keywords = ["http", "websocket", "server", "uwebsockets"]
exclude = ["build.rs"]


[profile.dev]
debug = true
[profile.dev.build-override]
debug = true

[features]
native-access = []
uws_vendored = ["libuwebsockets-sys/uws_vendored"]
z_vendored = ["libuwebsockets-sys/z_vendored"]
uv_vendored = ["libuwebsockets-sys/uv_vendored"]
openssl_vendored = ["libuwebsockets-sys/openssl_vendored"]



[dependencies]
libuwebsockets-sys = { path = "../libuwebsockets-sys", version = "0.0.9", features = ["uws_vendored", "z_vendored", "uv_vendored", "openssl_vendored"] }





